News Section Added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
         <img src="logo.svg" alt="Deakin" width="200" height="210">
     </div>
     <h1>SIT223-SIT753 - Professional Practice in IT</h1>
+    <section class="news">
+        <article>
+            <h2>Breaking News</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae ligula ac nunc mattis vehicula.</p>
+            <a href="#">Read More</a>
+        </article>
+        <article>
+            <h2>Latest Updates</h2>
+            <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            <a href="#">Read More</a>
+        </article>
+    </section>
 </body>
 </html>
