--- a/index.html
+++ b/index.html
@@ -7,26 +7,20 @@
 <body>
 <h1>SIT223-SIT753 - Professional Practice in IT</h1>
 <h2> Unit details</h2>
-<table style="width:100%">
- <tr>
- <td>Year: </td>
- <td>2023 unit information</td>
- </tr>
- <tr>
- <td>Enrolment modes:</td>
- <td>Trimester 1: Burwood (Melbourne), Geelong, Cloud (online)</td>
- </tr>
- <tr>
- <td>Credit point(s):</td>
- <td>1</td>
- </tr>
- <tr>
- <td> Unit Chair:</td>
- <td> Trimester 1: Azadeh Ghari Neiat</td>
-</tr>
- <tr>
-    <td> Scheduled Learning Activities:</td>
-    <td> 1 x 3 hour active class per week, weekly drop in support.</td>
-</tr>
-</table> </body>
+<div>
+    <img src="logo.svg" alt="Deakin" width="200" height="210">
+</div>
+<section class="news">
+    <article>
+        <h2>Breaking News</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae ligula ac nunc mattis vehicula.</p>
+        <a href="#">Read More</a>
+    </article>
+    <article>
+        <h2>Latest Updates</h2>
+        <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        <a href="#">Read More</a>
+    </article>
+</section>
+ </body>
 </html>
