--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
 <div>
     <img src="logo.svg" alt="Deakin" width="200" height="210">
 </div>
+<table style="width:100%">
+    <tr>
+        <td>Year: </td>
+        <td>2023 unit information</td>
+    </tr>
+    <tr>
+        <td>Enrolment modes:</td>
+        <td>Trimester 1: Burwood (Melbourne), Geelong, Cloud (online)</td>
+    </tr>
+    <tr>
+        <td>Credit point(s):</td>
+        <td>1</td>
+    </tr>
+    <tr>
+        <td> Unit Chair:</td>
+        <td> Trimester 1: Azadeh Ghari Neiat</td>
+    </tr>
+</table>
+<h3> Content</h3>
+<p> To be successful IT graduates need to understand the use of industry tools and practices, the ways these tools work
+    and connect together, and the underlying professional, ethical, and teamwork knowledge and skills needed to put
+    these into practice in a professional manner. </p>
+<a href="https://www.deakin.edu.au/students/enrolment-and-fees/fees"> > Current students</a>
 <section class="news">
     <article>
         <h2>Breaking News</h2>
